[package]
name = "profitable_rust_biz"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.7.9", features = ["multipart"] } # Downgrade to 0.7.9 for shuttle compatibility if needed, or keep 0.8 if shuttle supports it. Shuttle usually lags slightly. Let's try 0.7.9 to be safe or check shuttle docs. Actually, let's stick to what was there but add shuttle.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
chrono = { version = "0.4.34", features = ["serde"] }
csv = "1.3.0"
dotenvy = "0.15.7"
image = "0.24.9"
mime = "0.3.17"
multipart = "0.18.0"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tera = "1.19.1"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "std"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
shuttle-axum = "0.50.0"
shuttle-runtime = "0.50.0"
shuttle-shared-db = { version = "0.50.0", features = ["postgres", "sqlx"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }


[[bin]]
name = "generator"
path = "src/generator.rs"

[[bin]]
name = "api_server"
path = "src/main.rs"
